--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@types/mermaid": "^9.1.0",
+    "@types/pg": "^8.15.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
@@ -30,6 +31,7 @@
     "mermaid": "^11.10.1",
     "next": "15.4.6",
     "nuqs": "^2.4.3",
+    "pg": "^8.16.3",
     "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
